# wlk

./: README.md
server/: .gitignore  Cargo.toml  Dockerfile
server/.cargo/: config.toml
server/prisma/: schema.prisma
server/prisma_cli/: Cargo.toml
server/src/: auth.rs  lib.rs  routes.rs
website/: .eslintignore  .eslintrc  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  vite-env.d.ts
website/src/components/: ArticleOverviews.tsx  Footer.tsx  StyledComponents.ts  SubtitleTypography.tsx
website/src/components/Admin/: AdminPanel.tsx  CategoryForm.tsx  DisciplineForm.tsx  EdgeArticleForm.tsx  EdgeCreationForm.tsx  EdgeDeletionForm.tsx  NodeForm.tsx
website/src/components/Graph/: CanvasControls.tsx  Graph.tsx
website/src/definitions/: colors.ts  constants.ts  graphStyles.ts  texts.ts
website/src/pages/: AdminPage.tsx  GlossarPage.tsx
website/src/types/: D3Types.ts  GraphTypes.ts
website/src/utils/: d3Helpers.ts  genericHelpers.ts
